<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TaskDetailActivity">

    <TextView
        android:id="@+id/cityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#6B888888"
        app:layout_constraintBottom_toBottomOf="@+id/cityTitleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toEndOf="@+id/cityTitleTextView"
        app:layout_constraintTop_toTopOf="@+id/cityTitleTextView"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/CityTItle" />

    <TextView
        android:id="@+id/longitudeTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LongitudeText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitudeTitleTextView"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/taskDetailsHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TaskDetailHeader"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/taskDetailsDescTextView"
        android:layout_width="345dp"
        android:layout_height="167dp"
        android:text="@string/LoremText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskItemImageView"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/taskDetailsTeamTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDetailsHeaderTextView"
        tools:text="Team Name Here" />

    <ImageView
        android:id="@+id/taskItemImageView"
        android:layout_width="186dp"
        android:layout_height="174dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDetailsTeamTextView"
        app:layout_constraintVertical_bias="0.112"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/latitudeTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LatitudeText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityTitleTextView"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/cityTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CityTItle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDetailsDescTextView"
        app:layout_constraintVertical_bias="0.649" />

    <TextView
        android:id="@+id/latitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#6B888888"
        app:layout_constraintBottom_toBottomOf="@+id/latitudeTitleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toEndOf="@+id/latitudeTitleTextView"
        app:layout_constraintTop_toTopOf="@+id/latitudeTitleTextView"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/LatitudeText" />

    <TextView
        android:id="@+id/longitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#6B888888"
        app:layout_constraintBottom_toBottomOf="@+id/longitudeTitleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toEndOf="@+id/longitudeTitleTextView"
        app:layout_constraintTop_toTopOf="@+id/longitudeTitleTextView"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/LongitudeText" />
</androidx.constraintlayout.widget.ConstraintLayout>